# zs-filecrawler

./: Cargo.nix  Cargo.toml  DESIGN.md  README.md  flake.nix
src/: main.rs  misc.rs  run.rs  signals.rs
