[package]
name = "zs-filecrawler"
description = "crawles files, resumable"
version = "0.0.3"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/zs-filecrawler"

[dependencies]
bincode = "1.3"
byte-unit = "4.0"
digest = "0.9"
flate2 = "1.0"
generic-array = { version = "0.14", features = ["serde"] }
hashbrown = { version = "0.8", features = ["rayon","serde"] }
hex = "0.4"
indoc = "0.3"
log = "0.4"
rayon = "1.3"
readfilez = "0.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.9"
signal-hook = "0.1"
simplelog = "0.8"
text_io = "0.1"

[profile.release]
lto = true
