[package]
name = "zs-filecrawler"
description = "crawles files, resumable"
version = "0.1.0"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/zs-filecrawler"

[dependencies]
byte-unit = "4.0"
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
digest = "0.9"
hex = "0.4"
indicatif = "0.15"
indoc = "0.3"
log = "0.4"
num_cpus = "1.13"
readfilez = "0.2"
sha2 = "0.9"
signal-hook = "0.1"
simplelog = "0.8"
sled = { version = "0.32", features = ["compression"] }
text_io = "0.1"

[profile.release]
lto = true
