[package]
name = "zs-filecrawler"
description = "crawles files, resumable"
version = "0.1.1"
authors = ["Erik Zscheile <erik.zscheile@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zserik/zs-filecrawler"

[dependencies]
byte-unit = "4.0"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
digest = "0.9"
globwalk = "0.8"
hex = "0.4"
indicatif = "0.15"
indoc = "1.0"
log = "0.4"
num_cpus = "1.13"
readfilez = "0.2"
sha2 = "0.9"
simplelog = "0.9"
text_io = "0.1"

[dependencies.signal-hook]
version = "0.3"
default-features = false

[dependencies.sled]
version = "0.34"
features = ["compression"]

[features]
io_uring = ["sled/io_uring"]

[profile.release]
lto = true
